--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,6 +11,4 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
 Imports: 
-    lubridate
-    readr
-    stringr
+    lubridate, readr, stringr
